# tax-perception-analysis

./: .gitignore  README.md  Survey-of-Tax-Perceptions-in-Nigeria-FIRM-QUESTIONNAIRE-FINAL.doc  Survey-of-Tax-and-Subsidy-Perceptions-in-Nigeria-HOUSEHOLD-QUESTIONNAIRE-FINAL.doc  main.py  pyproject.toml  requirements.txt
data/raw/: Firm-Codebook-Final-JAN-2019.xls  HH-Codebook-Final-JAN-2019.xls
src/: explore_codebooks.py
